Prevent scroll jump

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -35,8 +35,10 @@
   box-sizing: border-box;
   font-size: var(--font-size-base);
   scroll-behavior: smooth;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+
+html {
+  scrollbar-gutter: stable;
 }
 
 body {
@@ -47,7 +49,14 @@ body {
   line-height: 1.6;
   margin: 0;
   padding: 0;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
 
 /* Typography */
 h1, h2, h3, h4, h5, h6,
@@ -174,6 +183,11 @@ a:hover { text-decoration: underline; }
   -webkit-mask-composite: xor;
   mask-composite: exclude;
   z-index: -1;
+}
+
+a,
+.button {
+  user-select: none;
 }
 
 .button.button--filled::before {
